<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg_movie_detail"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/blur_image_background"
    tools:context=".DetailMovie"
    tools:ignore="Overdraw">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_background">

        <RelativeLayout
            android:id="@+id/header_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#558F8DBF"
            android:paddingLeft="@dimen/activity_horizontal_default"
            android:paddingTop="@dimen/activity_horizontal_default"
            android:paddingRight="@dimen/activity_horizontal_default"
            android:paddingBottom="@dimen/activity_horizontal_default">

            <TextView
                android:id="@+id/txt_movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/open_sans_bold_1"
                android:maxLines="3"
                android:text="@string/movie_title"
                android:textColor="@color/colorPrimaryLightest"
                android:textSize="31sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <RelativeLayout
                android:id="@+id/txt_title_and_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_movie_name">

                <ImageView
                    android:id="@+id/img_poster_movie"
                    android:layout_width="140dp"
                    android:layout_height="210dp"
                    android:background="@drawable/shadow_poster"
                    android:scaleType="fitXY"
                    android:src="@drawable/poster_a_star"
                    android:contentDescription="@string/this_is_poster" />

                <TextView
                    android:id="@+id/txt_movie_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/img_poster_movie"
                    android:fontFamily="@font/open_sans_semibold_1"
                    android:text="@string/movie_rate"
                    android:textColor="@color/colorPrimaryLightest"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    android:shadowColor="#7F000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/txt_movie_rate"
                    android:layout_toEndOf="@id/txt_movie_rate"
                    android:fontFamily="@font/open_sans_semibold_1"
                    android:text="@string/max_movie_rate"
                    android:textColor="@color/colorPrimaryLightest"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="monospace" />

                <TextView
                    android:id="@+id/txt_movie_crew_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_movie_rate"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/img_poster_movie"
                    android:ellipsize="end"
                    android:fontFamily="@font/open_sans"
                    android:maxLines="1"
                    android:text="@string/movie_crew_title"
                    android:textColor="@color/colorPrimaryLightest"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_movie_crew_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_movie_crew_title"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/img_poster_movie"
                    android:ellipsize="end"
                    android:fontFamily="@font/open_sans"
                    android:maxLines="1"
                    android:text="@string/movie_crew_name1"
                    android:textColor="@color/colorPrimaryLightest"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_movie_crew_job1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_movie_crew_name1"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/img_poster_movie"
                    android:ellipsize="end"
                    android:fontFamily="@font/open_sans"
                    android:maxLines="1"
                    android:text="@string/movie_crew_job1"
                    android:textColor="@color/colorPrimaryLightest"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_movie_crew_name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_movie_crew_job1"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/img_poster_movie"
                    android:ellipsize="end"
                    android:fontFamily="@font/open_sans"
                    android:maxLines="1"
                    android:text="@string/movie_crew_name2"
                    android:textColor="@color/colorPrimaryLightest"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_movie_crew_job2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_movie_crew_name2"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/img_poster_movie"
                    android:ellipsize="end"
                    android:fontFamily="@font/open_sans"
                    android:maxLines="1"
                    android:text="@string/movie_crew_job2"
                    android:textColor="@color/colorPrimaryLightest"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_movie_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_movie_crew_job2"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/img_poster_movie"
                    android:ellipsize="end"
                    android:fontFamily="@font/open_sans"
                    android:maxLines="1"
                    android:text="@string/movie_category"
                    android:textColor="@color/colorPrimaryLightest"
                    android:textSize="14sp" />


            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_detail"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="@dimen/activity_horizontal_default"
            android:paddingTop="@dimen/activity_horizontal_default"
            android:paddingRight="@dimen/activity_horizontal_default"
            android:paddingBottom="@dimen/activity_horizontal_default">

            <TextView
                android:id="@+id/txt_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:fontFamily="@font/open_sans"
                android:maxLines="1"
                android:text="@string/trailer_title"
                android:textColor="@color/colorPrimaryLightest"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/img_trailer_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_trailer">

                <ImageView
                    android:id="@+id/img_trailer_link"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:layout_marginTop="15dp"
                    android:alpha="0.5"
                    android:background="@drawable/shadow_poster"
                    android:scaleType="centerCrop"
                    android:src="@drawable/poster_a_star"
                    android:contentDescription="@string/this_for_background_image">

                </ImageView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:alpha="0.9"
                    android:background="@drawable/ic_play_circle_filled_white_100dp"
                    android:contentDescription="@string/this_for_button">

                </ImageView>
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_trailer_container"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:ellipsize="end"
                android:fontFamily="@font/open_sans"
                android:maxLines="1"
                android:text="@string/overview_title"
                android:textColor="@color/colorPrimaryLightest"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_movie_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_overview"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/open_sans"
                android:text="@string/movie_desc"
                android:textColor="@color/colorPrimaryLightest"
                android:textSize="14sp" />

        </RelativeLayout>


    </RelativeLayout>


</ScrollView>