<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_poster_movie"
        android:layout_width="140dp"
        android:layout_height="210dp"
        android:scaleType="fitXY"
        android:src="@drawable/poster_a_star"
        android:background="@drawable/shadow_poster"/>

    <RelativeLayout
        android:id="@+id/txt_title_and_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_poster_movie">

        <TextView
            android:id="@+id/txt_movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="5dp"
            android:layout_toLeftOf="@id/txt_movie_rate"
            android:fontFamily="@font/open_sans_bold_1"
            android:maxLines="3"
            android:text="@string/movie_title"
            android:textColor="@color/colorPrimaryLightest"
            android:textSize="21sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/txt_movie_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_movie_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:background="#4CAF50"
            android:fontFamily="@font/open_sans_semibold_1"
            android:gravity="right"
            android:padding="@dimen/padding_rate"
            android:text="@string/movie_rate"
            android:textColor="@color/colorPrimaryLightest"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="monospace"
            android:layout_marginTop="5dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_movie_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title_and_rate"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/img_poster_movie"
        android:ellipsize="end"
        android:fontFamily="@font/open_sans"
        android:maxLines="1"
        android:text="@string/movie_category"
        android:textColor="@color/colorPrimaryLightest"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txt_movie_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_movie_cat"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/img_poster_movie"
        android:ellipsize="end"
        android:fontFamily="@font/open_sans"
        android:maxLines="4"
        android:text="@string/movie_desc"
        android:textColor="@color/colorPrimaryLightest"
        android:textSize="14sp" />



</RelativeLayout>